--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		</header>
 		{{ content }}
 		<footer>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> •</p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Mynet Group Limited</p>
 			</div>
 		</footer>
 		<script>
