--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name" style="height:33"><a href="{{ site.baseurl }}/"></a></div>
+				<div class="company-name" style="height:33px "></div>
 				{% include navigation.html %}
 			</div>
 		</header>
